--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
+html,
+body {
+  min-height: 50vh;
+  margin: 0;
+  background-color: #e9be94;
+}
+
 .container {
+  min-height: 50vh;
+  margin: 0;
   display: grid;
   grid-template-columns: 0.5fr 3fr;
-  gap: 4px;
-
-  background-color: #e5e7eb;
+  background-color: #e9be94;
 }
 
 .title {
@@ -11,15 +18,19 @@
 }
 
 .sidebar {
-  background-color: #0ea5e9;
-
-  grid-row: 1 / 5;
+  background-color: #c86700;
   display: grid;
-  margin-right: 10px;
+  grid-template-rows: 0.15fr 0.5fr 1fr;
+  grid-column: 1 / 2;
+  grid-row: 1 / 4;
 }
 
 .sidebar div {
   color: white;
+}
+
+.logo {
+  font-size: 20px;
 }
 
 .sidebar-link,
@@ -27,8 +38,7 @@
 .dashboard {
   display: grid;
   grid-template-columns: 0.5fr 1fr;
-  /* align-items: center; */
-
+  justify-items: center;
   margin-bottom: 15px;
 }
 
@@ -41,29 +51,37 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
 
-  gap: 15px;
-  margin: 0;
-  background-color: white;
+  gap: 5px;
+  margin-left: 0px;
+  background-color: #ffd381;
 }
 
 .header-top {
   display: grid;
-  grid-template-columns: 0.25fr 1fr 1fr;
+  grid-template-columns: 1.2fr 1fr;
   grid-column-start: 1;
   grid-column-end: 4;
+  margin-left: 10px;
+  align-items: center;
+}
 
-  /* justify-content: center;
-  align-items: center; */
+.search {
+  display: grid;
+  grid-template-columns: 0.1fr 0.9fr;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  align-items: center;
 }
 
 .header-bottom {
   display: grid;
-  grid-template-columns: 0.1fr 1fr 1fr 1fr 1fr;
-
+  grid-template-columns: 0.1fr 1.5fr 1fr 1fr 1fr 1fr 1fr;
+  margin-left: 40px;
   grid-column-start: 1;
   grid-column-end: 4;
   grid-row-start: 2;
   grid-row-end: 4;
+  margin-bottom: 10px;
 }
 
 .grid-item {
@@ -78,7 +96,7 @@
   color: white;
   border: none;
   border-radius: 20px;
-  background-color: #0ea5e9;
+  background-color: #c86700;
   gap: 15px;
   width: 75px;
   font-weight: bold;
@@ -86,23 +104,20 @@
 
 .header-buttons {
   display: grid;
-  grid-template-columns: 0.5fr 0.5fr 0.5fr;
-  grid-column-start: 4;
-  grid-column-end: 6;
-
+  grid-template-columns: 0.1fr 0.1fr 0.1fr;
+  grid-column-start: 6;
+  grid-column-end: 7;
   height: 30px;
-  display: flex;
-  justify-content: center;
-  /* align-items: flex-end; */
+  justify-items: center;
   gap: 20px;
+  margin-top: 18px;
 }
 
 .profile-picture {
   display: grid;
-  grid-template-columns: 0.25fr 0.5fr;
+  grid-template-columns: 0.5fr;
   grid-column-start: 1;
-  grid-column-end: 3;
-  /* gap: 15px; */
+  grid-column-end: 2;
 }
 
 .profile-name {
@@ -112,7 +127,6 @@
   grid-row-end: 2;
   grid-column-start: 2;
   grid-column-end: 3;
-  /* gap: 15px; */
 }
 
 .greeting {
@@ -130,21 +144,19 @@
   display: grid;
   grid-column-start: 2;
   grid-column-end: 3;
-
   grid-row-start: 2;
   grid-row-end: 3;
-
   align-items: flex-start;
-
   font-weight: bold;
 }
 
 .user-buttons {
   display: grid;
   grid-template-columns: 0.5fr 0.5fr 0.5fr;
-  grid-column-start: 3;
-  grid-column-end: 4;
-
+  grid-column-start: 2;
+  grid-column-end: 3;
+  align-items: center;
+  padding-top: 10px;
   display: flex;
   justify-content: center;
   gap: 20px;
@@ -153,8 +165,8 @@
 .Projects {
   display: grid;
   grid-template-columns: 0.5fr 0.5fr 1fr;
-  grid-template-rows: 0.1fr 1fr;
-  background-color: #e5e7eb;
+  grid-template-rows: 0.1fr 0.5fr 0.5fr;
+  background-color: #e9be94;
   gap: 25px;
 }
 
@@ -162,43 +174,56 @@
   display: grid;
   grid-column-start: 3;
   grid-column-end: 4;
-  grid-row-start: 1;
-  grid-row-end: 2;
 }
 
 .socials {
   display: grid;
-  grid-template-rows: 1fr 1fr;
-
+  grid-template-rows: 0.1fr 1fr;
   grid-column-start: 3;
   grid-column-end: 4;
   grid-row-start: 2;
-  grid-row-end: 3;
+  grid-row-end: 4;
 }
 
 .your-projects {
-  grid-column-start: 1;
-  grid-column-end: 3;
-  grid-row-start: 1;
-  grid-row-end: 2;
+  display: grid;
+  padding-left: 30px;
 }
 
 .projects-container1,
 .projects-container2 {
   display: grid;
   grid-template-columns: 0.5fr;
+  gap: 39px;
+}
+
+.projects-container1 {
+  display: grid;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  margin-left: 30px;
+}
+
+.projects-container2 {
+  display: grid;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 3;
 }
 
 .card {
   display: grid;
-  height: 230px;
+  height: 252px;
   width: 400px;
   grid-template-columns: 0.05fr 0.2fr 0.5fr 0.5fr 0.5fr 0.25fr;
-  grid-template-rows: 0.25fr 0.5fr 1fr;
-  /* border: 1px solid black; */
+  grid-template-rows: 0.25fr 1fr 0.5fr;
   margin-bottom: 15px;
   border-radius: 10px;
   background-color: white;
+  font-size: 15px;
 }
 
 .star,
@@ -213,7 +238,6 @@
   grid-template-columns: 0.3fr 0.3fr 0.3fr;
   align-items: center;
   justify-content: flex-end;
-
   grid-column-start: 5;
   grid-column-end: 7;
   grid-row-start: 3;
@@ -221,10 +245,9 @@
 }
 
 .empty {
-  background-color: #fbbf24;
+  background-color: #9d6600;
   grid-row-start: 1;
   grid-row-end: 4;
-
   border-radius: 5px;
 }
 
@@ -233,7 +256,6 @@
   grid-column-end: 5;
   grid-row-start: 1;
   grid-row-end: 2;
-
   font-weight: bold;
 }
 
@@ -243,53 +265,123 @@
   grid-column-end: 6;
   grid-row-start: 2;
   grid-row-end: 3;
+  font-size: 15px;
+  color: gray;
 }
 
-.search-button,
 .notifications-icon {
   height: 30px;
   width: 30px;
-  background-color: white;
+  background-color: #ffd381;
   border: none;
 }
 
 .garfield {
   height: 50px;
   width: 50px;
-  background-color: white;
+  background-color: #ffd381;
   border: none;
 }
 
 .notifications {
-  background-color: white;
+  background-color: #ffd381;
   border: none;
 }
 
 .search-bar {
+  height: 25px;
   border-radius: 20px;
   border: none;
-  background-color: #e5e7eb;
+  background-color: white;
+}
+
+.search-button {
+  height: 30px;
+  width: 30px;
+  background-color: #ffd381;
+  border: none;
+  margin-left: 30px;
 }
 
 .trending-container {
   display: grid;
+  grid-template-rows: 0.1fr 1fr;
   grid-row-start: 2;
-  grid-row-end: 3;
+  grid-row-end: 4;
 }
 
 .announcements-container {
+  display: grid;
+  grid-template-rows: 0.25fr 0.25fr 0.25fr;
   background-color: white;
   border-radius: 15px;
-  height: 350px;
+  height: 450px;
   width: 350px;
-  /* align-items: center;
-  justify-content: center; */
+  justify-content: center;
 }
+
+.side-card,
+.side-card2,
+.side-card1 {
+  display: grid;
+  grid-template-columns: 0.5fr;
+  grid-template-rows: 0.5fr 1fr;
+  margin-bottom: 20px;
+  width: 300px;
+  align-content: center;
+}
+
+.side-card2 {
+  border-bottom: 1px solid lightgray;
+  border-top: 1px solid lightgray;
+}
+
+.side-card {
+  display: grid;
+}
+
+.social-title {
+  font-weight: bold;
+  grid-column-start: 2;
+  grid-column-end: 7;
+}
+.social-description {
+  display: grid;
+  grid-column-start: 2;
+  grid-column-end: 7;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  font-size: 15px;
+  color: gray;
+  overflow: hidden;
+}
+
 .trends {
   background-color: white;
   border-radius: 15px;
   height: 350px;
   width: 350px;
-  /* align-items: center;
-  justify-content: center; */
+}
+
+.profile-div {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.pfp {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  height: 50px;
+  width: 50px;
+  align-self: center;
+  justify-items: center;
+  padding-left: 30%;
+}
+
+.name {
+  font-weight: bold;
+}
+
+.user-projects {
+  color: gray;
 }
