--- a/style.css
+++ b/style.css
@@ -5,384 +5,95 @@ body {
   background-color: #e9be94;
 }
 
-.container {
-  min-height: 50vh;
-  margin: 0;
-  display: grid;
-  grid-template-columns: 0.5fr 3fr;
-  background-color: #e9be94;
-}
+/* div {
+  border: solid 1px red;
+} */
 
-.title {
-  font-weight: bold;
+.container {
+  /* height: 100vh; */
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: 0.5fr 3fr 1fr;
 }
 
 .sidebar {
-  background-color: #c86700;
+  grid-area: 1/1/5/2;
+  background-color: #ffd381;
+
   display: grid;
-  grid-template-rows: 0.15fr 0.5fr 1fr;
-  grid-column: 1 / 2;
-  grid-row: 1 / 4;
-}
-
-.sidebar div {
-  color: white;
-}
-
-.logo {
-  font-size: 20px;
-}
-
-.sidebar-link,
-.settings-sidebar,
-.dashboard {
-  display: grid;
-  grid-template-columns: 0.5fr 1fr;
-  justify-items: center;
-  margin-bottom: 15px;
-}
-
-.dashboard {
-  padding-top: 20px;
+  grid-template-rows: 0.25fr 1fr 1fr;
 }
 
 .header {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-
-  gap: 5px;
-  margin-left: 0px;
-  background-color: #ffd381;
+  grid-area: 1/2/2/4;
+  background-color: white;
 }
 
-.header-top {
+.sidebar-buttons {
   display: grid;
-  grid-template-columns: 1.2fr 1fr;
-  grid-column-start: 1;
-  grid-column-end: 4;
-  margin-left: 10px;
-  align-items: center;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
 }
 
-.search {
+.projects {
+  grid-area: 2/2/5/3;
   display: grid;
-  grid-template-columns: 0.1fr 0.9fr;
-  grid-column-start: 1;
-  grid-column-end: 2;
-  align-items: center;
-}
-
-.header-bottom {
-  display: grid;
-  grid-template-columns: 0.1fr 1.5fr 1fr 1fr 1fr 1fr 1fr;
-  margin-left: 40px;
-  grid-column-start: 1;
-  grid-column-end: 4;
-  grid-row-start: 2;
-  grid-row-end: 4;
-  margin-bottom: 10px;
-}
-
-.grid-item {
-  display: grid;
-  align-items: center;
-  justify-items: center;
-}
-
-.new,
-.upload,
-.share {
-  color: white;
-  border: none;
-  border-radius: 20px;
-  background-color: #c86700;
-  gap: 15px;
-  width: 75px;
-  font-weight: bold;
-}
-
-.header-buttons {
-  display: grid;
-  grid-template-columns: 0.1fr 0.1fr 0.1fr;
-  grid-column-start: 6;
-  grid-column-end: 7;
-  height: 30px;
-  justify-items: center;
-  gap: 20px;
-  margin-top: 18px;
-}
-
-.profile-picture {
-  display: grid;
-  grid-template-columns: 0.5fr;
-  grid-column-start: 1;
-  grid-column-end: 2;
-}
-
-.profile-name {
-  display: grid;
-  grid-template-columns: 0.1fr;
-  grid-row-start: 1;
-  grid-row-end: 2;
-  grid-column-start: 2;
-  grid-column-end: 3;
-}
-
-.greeting {
-  display: grid;
-  grid-template-rows: 0.1fr;
-  grid-column-start: 2;
-  grid-column-end: 3;
-
-  align-items: flex-end;
-  font-size: 12px;
-  font-weight: bold;
-}
-
-.user-name {
-  display: grid;
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 2;
-  grid-row-end: 3;
-  align-items: flex-start;
-  font-weight: bold;
-}
-
-.user-buttons {
-  display: grid;
-  grid-template-columns: 0.5fr 0.5fr 0.5fr;
-  grid-column-start: 2;
-  grid-column-end: 3;
-  align-items: center;
-  padding-top: 10px;
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-}
-
-.Projects {
-  display: grid;
-  grid-template-columns: 0.5fr 0.5fr 1fr;
-  grid-template-rows: 0.1fr 0.5fr 0.5fr;
-  background-color: #e9be94;
-  gap: 25px;
-}
-
-.announcements {
-  display: grid;
-  grid-column-start: 3;
-  grid-column-end: 4;
-}
-
-.socials {
-  display: grid;
-  grid-template-rows: 0.1fr 1fr;
-  grid-column-start: 3;
-  grid-column-end: 4;
-  grid-row-start: 2;
-  grid-row-end: 4;
+  grid-template-rows: 1fr, repeat(3, 1fr);
+  margin-right: 25px;
+  margin-left: 25px;
 }
 
 .your-projects {
-  display: grid;
-  padding-left: 30px;
+  grid-area: 1/1/2/2;
 }
 
-.projects-container1,
-.projects-container2 {
+.projects-container {
+  grid-area: 2/1/5/2;
   display: grid;
-  grid-template-columns: 0.5fr;
-  gap: 39px;
-}
-
-.projects-container1 {
-  display: grid;
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 2;
-  grid-row-end: 3;
-  margin-left: 30px;
-}
-
-.projects-container2 {
-  display: grid;
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 2;
-  grid-row-end: 3;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  gap: 15px;
 }
 
 .card {
-  display: grid;
-  height: 252px;
-  width: 400px;
-  grid-template-columns: 0.05fr 0.2fr 0.5fr 0.5fr 0.5fr 0.25fr;
-  grid-template-rows: 0.25fr 1fr 0.5fr;
-  margin-bottom: 15px;
+  height: 85%;
   border-radius: 10px;
   background-color: white;
   font-size: 15px;
   border-left: 10px solid #9d6600;
 }
 
-.star,
-.eye,
-.fork {
-  height: 28px;
-  width: 28px;
+.announcements-grid,
+.socials {
+  background-color: white;
 }
 
-.icon-container {
+.right-column {
+  grid-area: 2/3/6/4;
+  margin-right: 25px;
   display: grid;
-  grid-template-columns: 0.3fr 0.3fr 0.3fr;
-  align-items: center;
-  justify-content: flex-end;
-  grid-column-start: 5;
-  grid-column-end: 7;
-  grid-row-start: 3;
-  grid-row-end: 4;
+  grid-template-rows: repeat(2, 0.8fr);
+  /* grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); */
 }
 
-/* .empty {
-  background-color: #9d6600;
-  grid-row-start: 1;
-  grid-row-end: 4;
-  border-radius: 5px;
+h3 {
+}
+
+.side-card + .side-card {
+  border-top: gray 1px solid;
+}
+
+/* .announcements {
+  grid-area: 1/2/2/3;
+}
+
+.announcements-grid {
+}
+
+.trending {
+  grid-area: 3/3/5/4;
+}
+
+.socials {
+  grid-area: 4/3/6/4;
 } */
-
-.title {
-  grid-column-start: 3;
-  grid-column-end: 5;
-  grid-row-start: 1;
-  grid-row-end: 2;
-  font-weight: bold;
-}
-
-.description {
-  display: grid;
-  grid-column-start: 3;
-  grid-column-end: 6;
-  grid-row-start: 2;
-  grid-row-end: 3;
-  font-size: 15px;
-  color: gray;
-}
-
-.notifications-icon {
-  height: 30px;
-  width: 30px;
-  background-color: #ffd381;
-  border: none;
-}
-
-.garfield {
-  height: 50px;
-  width: 50px;
-  background-color: #ffd381;
-  border: none;
-}
-
-.notifications {
-  background-color: #ffd381;
-  border: none;
-}
-
-.search-bar {
-  height: 25px;
-  border-radius: 20px;
-  border: none;
-  background-color: white;
-}
-
-.search-button {
-  height: 30px;
-  width: 30px;
-  background-color: #ffd381;
-  border: none;
-  margin-left: 30px;
-}
-
-.trending-container {
-  display: grid;
-  grid-template-rows: 0.1fr 1fr;
-  grid-row-start: 2;
-  grid-row-end: 4;
-}
-
-.announcements-container {
-  display: grid;
-  grid-template-rows: 0.25fr 0.25fr 0.25fr;
-  background-color: white;
-  border-radius: 15px;
-  height: 450px;
-  width: 350px;
-  justify-content: center;
-}
-
-.side-card,
-.side-card2,
-.side-card1 {
-  display: grid;
-  grid-template-columns: 0.5fr;
-  grid-template-rows: 0.5fr 1fr;
-  margin-bottom: 20px;
-  width: 300px;
-  align-content: center;
-}
-
-.side-card2 {
-  border-bottom: 1px solid lightgray;
-  border-top: 1px solid lightgray;
-}
-
-.side-card {
-  display: grid;
-}
-
-.social-title {
-  font-weight: bold;
-  grid-column-start: 2;
-  grid-column-end: 7;
-}
-.social-description {
-  display: grid;
-  grid-column-start: 2;
-  grid-column-end: 7;
-  grid-row-start: 2;
-  grid-row-end: 3;
-  font-size: 15px;
-  color: gray;
-  overflow: hidden;
-}
-
-.trends {
-  background-color: white;
-  border-radius: 15px;
-  height: 350px;
-  width: 350px;
-}
-
-.profile-div {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-.pfp {
-  grid-column-start: 1;
-  grid-column-end: 2;
-  height: 50px;
-  width: 50px;
-  align-self: center;
-  justify-items: center;
-  padding-left: 30%;
-}
-
-.name {
-  font-weight: bold;
-}
-
-.user-projects {
-  color: gray;
-}
