--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
+:root {
+  --primary-clr: #e9be94;
+  --secondary-clr: #ffd381;
+
+  --card-accent-clr: #9d6600;
+}
+
 html,
 body {
   min-height: 50vh;
+
   margin: 0;
-  background-color: #e9be94;
+  background: var(--primary-clr);
 }
 
 /* div {
@@ -10,73 +18,222 @@ body {
 } */
 
 .container {
-  /* height: 100vh; */
+  height: 100%;
   display: grid;
-  grid-template-rows: repeat(4, 1fr);
-  grid-template-columns: 0.5fr 3fr 1fr;
+  grid-template-rows: 0.5fr repeat(3, 1fr);
+  grid-template-columns: 0.75fr 3fr 1fr;
 }
 
 .sidebar {
   grid-area: 1/1/5/2;
-  background-color: #ffd381;
+  background: var(--secondary-clr);
 
   display: grid;
-  grid-template-rows: 0.25fr 1fr 1fr;
+  grid-template-rows: 0.15fr 0.4fr 1fr;
+  padding-left: 20px;
 }
 
 .header {
   grid-area: 1/2/2/4;
   background-color: white;
+  display: grid;
+  grid-template-rows: 0.5fr 1fr;
+  grid-template-columns: 2fr 1fr;
+  padding-left: 25px;
+  padding-right: 25px;
+  box-shadow: 2px 5px 2px 1px rgba(0, 0, 0, 0.1);
+}
+
+.profileButtons {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 30px;
+}
+
+.profileButtons button {
+  border-radius: 20px;
+  border: none;
+  background: var(--secondary-clr);
+  height: 40px;
+  width: 90px;
+  font-size: 1rem;
+}
+
+.topNav {
+  display: flex;
+}
+
+.header .topNav {
+  padding: 25px;
+}
+
+.bottomNav {
+  display: flex;
+  gap: 25px;
+  padding-left: 20px;
+}
+
+.pfp {
+  height: 85px;
+  width: 85px;
+}
+
+.profile-div {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  margin-bottom: 10px;
+}
+
+h4 {
+  margin-bottom: -20px;
+  padding: 0;
+}
+
+.profileName {
+}
+
+.socials {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 30px;
+}
+
+.searchIcon {
+  padding-right: 15px;
+  height: 28px;
+  width: 28px;
+}
+
+.notifications {
+  height: 40px;
+  width: 40px;
+}
+.profilePic {
+  height: 50px;
+  width: 50px;
+}
+
+.header .searchbar {
+  border-radius: 15px;
+  border: none;
+  background-color: var(--primary-clr);
+  height: 20px;
+
+  flex: 2 1;
+}
+
+.dashboard {
+  display: grid;
+  grid-template-rows: repeat(1, 5%);
+  grid-template-columns: repeat(2, 25%);
+  padding-top: 10px;
+}
+
+.dashboard-logo {
+  height: 50px;
+  width: 50px;
+}
+
+.logo {
+  font-size: 30px;
+  font-weight: bold;
+  padding-top: 8px;
 }
 
 .sidebar-buttons {
   display: grid;
-  grid-template-rows: repeat(2, 1fr);
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(6, 15%);
+  grid-template-columns: repeat(2, 15%);
+}
+
+.settings-buttons {
+  display: grid;
+  grid-template-rows: repeat(3, 5%);
+  grid-template-columns: repeat(2, 15%);
+}
+
+#dashboard-name {
+  font-size: 21px;
 }
 
 .projects {
   grid-area: 2/2/5/3;
   display: grid;
-  grid-template-rows: 1fr, repeat(3, 1fr);
+  grid-template-rows: 0.5fr, repeat(3, 1fr);
   margin-right: 25px;
   margin-left: 25px;
 }
 
-.your-projects {
+.projects h3 {
   grid-area: 1/1/2/2;
+  font-weight: bold;
+  font-size: 1.5rem;
+  padding-left: 15px;
 }
 
 .projects-container {
   grid-area: 2/1/5/2;
   display: grid;
-  grid-template-rows: repeat(2, 1fr);
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-  gap: 15px;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  gap: 25px;
+  margin-bottom: 15px;
 }
 
-.card {
-  height: 85%;
+.projects .card {
   border-radius: 10px;
   background-color: white;
   font-size: 15px;
-  border-left: 10px solid #9d6600;
+  border-left: 10px solid var(--card-accent-clr);
+  min-width: 400px;
+  display: flex;
+  flex-direction: column;
+  margin-right: 15px;
+  margin-left: 15px;
+}
+
+.top {
+  padding-left: 20px;
+}
+
+.top h4 {
+  padding-bottom: 10px;
+  font-size: 1.5rem;
+}
+
+.icon-container {
+  margin-top: auto;
+  align-self: flex-end;
+  display: flex;
+  justify-content: flex-end;
+  gap: 1.3rem;
+  align-items: center;
+  padding-bottom: 5px;
+  padding-right: 5px;
 }
 
 .announcements-grid,
-.socials {
+.socialsDiv {
   background-color: white;
+  border-radius: 15px;
+  padding: 20px;
 }
 
 .right-column {
   grid-area: 2/3/6/4;
   margin-right: 25px;
   display: grid;
-  grid-template-rows: repeat(2, 0.8fr);
-  /* grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); */
+  padding-left: 10px;
+  margin-bottom: 15px;
+  /* grid-template-rows: repeat(2, 0.8fr);
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); */
 }
 
-h3 {
+.announcements-grid h3 {
+  background: var(--primary-clr);
 }
 
 .side-card + .side-card {
